# mousecad-hud-env

./: .gitignore  Dockerfile.hud  README.md  cad_description_tasks.py  cad_dsl.py  cad_edit_tasks.py  cad_reward.py  env.py  llm_judge.py  mousecad_env.py  prompts.py  pyproject.toml  requirements.txt  tasks.py
fireworks_rft/: __init__.py  cad_reward.py  dataset.jsonl  test_mousecad_rft.py
scripts/: build_deepcad_rft_dataset.py
tests/: test_env.py
training_sdk_rl/: README.md  __init__.py  reward.py  rollout.py  train_mousecad.py
