[project]
name = "mousecad-fireworks-rl"
version = "0.1.0"
description = "Deterministic MouseCAD template-prediction rewards for Fireworks RL."
# v6 SDK caps at <3.13; pin the upper bound so uv does not pick 3.13 and fail.
requires-python = ">=3.11,<3.13"
dependencies = [
    "tokenizers>=0.22.0,<=0.23.0",
]

[dependency-groups]
dev = [
    "eval-protocol>=0.3.0",
    "pytest>=8",
    "pytest-asyncio>=0.23.0",
]
training = [
    "fireworks-ai[training]>=1.2.0a83,<2",
    "fireworks-training-cookbook @ git+https://github.com/fw-ai/cookbook.git#subdirectory=training",
    "tinker-cookbook==0.4.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
